# spaghetti-desk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.private.example.yml  docker-compose.yml  release-please-config.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  demo_data.py  main.py  models.py  settings.py
backend/app/actions/: __init__.py
backend/app/api/: routes.py
backend/app/collectors/: __init__.py  base.py  plugins.py  registry.py  runtime.py  scheduler.py
backend/app/persistence/: database.py  models.py  repositories.py  schema.py
backend/migrations/: env.py
backend/migrations/versions/: 20260704_0001_create_inventory_tables.py  20260705_0002_create_collector_plugin_tables.py  20260709_0003_create_action_logs.py
backend/tests/: test_api.py  test_collectors.py  test_config.py  test_local_installer.py  test_main.py  test_persistence.py  test_release_compose.py  test_scaffold_collector.py  test_service_vm_repositories.py  test_settings.py  test_settings_api.py
config/: config.example.yaml  private.example.yaml
docs/: action-audit.md  architecture.md  collector-plugin-template.md  collectors.md  container-release.md  data-boundaries.md  modules.md  persistence.md  private-configuration.md
frontend/: Dockerfile  index.html  package.json  (+2 more)
plugins/jenkins/: README.md  pyproject.toml
plugins/jenkins/spaghetti_desk_jenkins/: __init__.py
plugins/jenkins/tests/: test_jenkins_collector.py
(+31 files in other folders)
