[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "spaghetti-desk-backend"
version = "0.2.0"
description = "FastAPI backend for the Spaghetti Desk DevOps Control Center."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "apscheduler>=3.10,<4",
  "fastapi>=0.111,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
