[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "spaghetti-desk-collector-jenkins"
version = "0.1.0"
description = "Optional Jenkins collector plugin for Spaghetti Desk."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "spaghetti-desk-backend>=0.2.0",
]

[project.entry-points."spaghetti_desk.collectors"]
jenkins = "spaghetti_desk_jenkins:plugin"

[tool.setuptools.packages.find]
include = ["spaghetti_desk_jenkins*"]
